Use "fields" instead of "properties"
